--- a/src/app/main/apps/calendar/dialogs/event/event-dialog.scss
+++ b/src/app/main/apps/calendar/dialogs/event/event-dialog.scss
@@ -1,4 +1,7 @@
 #event-dialog {
+    position: relative;
+    min-width: 560px;
+    width: 560px;
 
     form {
         overflow: hidden;
@@ -10,61 +13,39 @@
             }
         }
 
-        md-dialog-content {
-            font-size: 15px;
-            min-width: 560px;
-            width: 560px;
-            padding: 24px 24px 16px 24px;
+        md-input-container {
 
-            md-input-container {
-                padding: 4px 0;
-
-                &.textarea-container {
-                    padding: 2px;
-                    padding-bottom: 26px;
-
-                    textarea {
-                        min-height: 150px;
-                    }
-                }
+            textarea {
+                min-height: 150px;
             }
+        }
 
-            .all-day {
-                margin: 24px 0 16px 0;
+        .date-row {
 
-                md-switch {
-                    margin: 0;
+            > md-input-container {
+                margin: 0 16px;
+
+                &:first-child {
+                    margin-left: 0;
                 }
-            }
 
-            .date-row {
-
-                > md-input-container {
-                    margin: 0 16px;
-
-                    &:first-child {
-                        margin-left: 0;
-                    }
-
-                    &:last-child {
-                        margin-right: 0;
-                    }
-                }
-            }
-
-            .notifications {
-                margin: 16px 0;
-
-                > .md-button {
-                    margin: 0;
+                &:last-child {
+                    margin-right: 0;
                 }
             }
         }
 
-        .md-actions {
-            justify-content: space-between;
-            border-top: 1px solid rgba(0, 0, 0, 0.12);
+        .notifications {
+            margin: 16px 0;
+
+            > .md-button {
+                margin: 0;
+            }
         }
     }
-}
 
+    .md-actions {
+        justify-content: space-between;
+        border-top: 1px solid rgba(0, 0, 0, 0.12);
+    }
+}
